@startuml dc_Bouton
class Program {
    - m_bouton : Bouton*
    ...
    + ctor()
    + void loop()
}

class Bouton {
    - m_pin : uint8_t
    - m_actionBoutonPresse : Action*
    ...
    + ctor(p_pinBouton : uint8_t, p_actionBoutonPresse : Action*)
    + void tick()
}

abstract class Action {
    + void {abstract} executer()
}

class ActionModifierIntesiteDEL {
    - m_DEL : DEL*
    - m_pourcentageIntensite : float
    - m_pas : float
    + ctor(p_DEL : DEL*)
    + void executer()
}

class DEL {
    - m_pinDEL: uint8_t
    ...
    + ctor(p_pinDEL : uint8_t)
    + void allumer()
    + void allumer(p_pourcentageIntensite : float)
    + void eteindre()
}

Program ..> DEL : create
Program ..> ActionModifierIntesiteDEL : create
Program .> Bouton : create
Program "1" -> "1" Bouton
ActionModifierIntesiteDEL "1" -l> "1" DEL
Bouton "1" --> "1" ActionModifierIntesiteDEL
ActionModifierIntesiteDEL -u-|> Action

@enduml
